# OEP_macos

./: CMakeLists.txt  README.md  ViewController.swift
cmake/: utils.cmake
framework/: CMakeLists.txt
interfaces/: pixel_buffer.hpp
libraries/: CmakeLists.txt
libraries/djinni/: CmakeLists.txt
libraries/djinni/objcpp/include/: BNBFullImageData+Private.h  BNBFullImageData.h
libraries/djinni/objcpp/src/: BNBFullImageData+Private.mm  BNBFullImageData.m  conversion.cpp
oep_framework/: CMakeLists.txt
offscreen_effect_player/include/: BNBOffscreenEffectPlayer.h  offscreen_effect_player.hpp
offscreen_effect_player/src/: BNBOffscreenEffectPlayer.mm  offscreen_effect_player.cpp
offscreen_render_target/include/: offscreen_render_target.h
offscreen_render_target/src/: ns_context.mm  offscreen_render_target.cpp  utils.mm
resources/: Info.plist
toolchain/: pack_framework.sh
